Dummy data feeder example

--- a/src/beamlime/offline/dummy_da_feeder.ipynb
+++ b/src/beamlime/offline/dummy_da_feeder.ipynb
@@ -118,11 +118,7 @@
    },
    "outputs": [],
    "source": [
-    "indices = [[x, y] for y in range(256) for x in range(256) if sum(img[x][y]) > 0]\n",
-    "# for x in range(256):\n",
-    "#     for y in range(256):\n",
-    "#         if sum(img[x][y]) > 0:\n",
-    "#             indices.append([x, y])"
+    "indices = [[x, y] for y in range(256) for x in range(256) if sum(img[x][y]) > 0]"
    ]
   },
   {
