Add noise range option in the data-feeder

--- a/src/beamlime/offline/proto.ipynb
+++ b/src/beamlime/offline/proto.ipynb
@@ -144,7 +144,8 @@
     "        if dh_class == \"BeamLimeDataReductionApplication\":\n",
     "            itf[\"instance\"] = handler(config=config[\"data-reduction\"])\n",
     "        elif dh_class == \"Fake2dDetectorImageFeeder\":\n",
-    "            itf[\"instance\"] = handler(config={\"num-frame\": 10})\n",
+    "            itf[\"instance\"] = handler(config={\"num-frame\": 10,\n",
+    "                                              \"noise-range\": 0.5})\n",
     "        else:\n",
     "            itf[\"instance\"] = handler()\n",
     "    return itf_map"
