Update configuration templates to have application spec

--- a/docs/fake_2d_image.ipynb
+++ b/docs/fake_2d_image.ipynb
@@ -31,7 +31,7 @@
     "import plopp as pp\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "from beamlime.resources import load_icon_img\n",
+    "from beamlime.resources.images import load_icon_img\n",
     "from beamlime.resources.images.generators import fake_2d_detector_img_generator\n",
     "\n",
     "%matplotlib widget"
@@ -120,10 +120,13 @@
     "                    coords={'x': sc.linspace('x', 0, detector_size[0]+1, detector_size[0]+1, unit='mm'),\n",
     "                            'y': sc.linspace('y', 0, detector_size[1]+1, detector_size[1]+1, unit='mm')})\n",
     "\n",
-    "generator = iter(fake_2d_detector_img_generator(seed_img, num_frame=128, threshold=0.5, noise_range=0))\n",
+    "generator = iter(fake_2d_detector_img_generator(seed_img, num_frame=128, min_intensity=0.5,\n",
+    "                                                signal_mu=0.5, signal_err=0.3,\n",
+    "                                                noise_mu=0, noise_err=0))\n",
     "\n",
-    "for simg in generator:\n",
-    "    base.values += simg\n",
+    "for isimg, simg in enumerate(generator):\n",
+    "    base.values *= (isimg/(isimg+1))\n",
+    "    base.values += simg/(isimg+1)\n",
     "\n",
     "base.plot(title=\"Without Noise\")"
    ]
@@ -147,6 +150,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b2574fb3-1c8b-4d9c-bdfe-ad9a669ec919",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6db4d790-c0cf-4c23-9b39-63ca6b9f3f62",
    "metadata": {
     "tags": []
@@ -157,12 +172,14 @@
     "                    coords={'x': sc.linspace('x', 0, detector_size[0]+1, detector_size[0]+1, unit='mm'),\n",
     "                            'y': sc.linspace('y', 0, detector_size[1]+1, detector_size[1]+1, unit='mm')})\n",
     "\n",
-    "generator = iter(fake_2d_detector_img_generator(seed_img, num_frame=128, threshold=0.5, noise_range=0.55))\n",
+    "generator = iter(fake_2d_detector_img_generator(seed_img, num_frame=128, min_intensity=0.5,\n",
+    "                                                signal_mu=0.3, signal_err=0.3,\n",
+    "                                                noise_mu=1, noise_err=0.3))\n",
+    "for isimg, simg in enumerate(generator):\n",
+    "    base.values *= (isimg/(isimg+1))\n",
+    "    base.values += simg/(isimg+1)\n",
     "\n",
-    "for simg in generator:\n",
-    "    base.values += simg\n",
-    "\n",
-    "base.plot(title=\"With Noise 0.55\")"
+    "base.plot(title=\"With Noise (mu=1, std=0.3)\")"
    ]
   },
   {
@@ -195,8 +212,9 @@
     "fig, axs = plt.subplots(3, 6, figsize=(12,6))\n",
     "fig.suptitle('Detector Image Frames To Be Fed - First 18')\n",
     "\n",
-    "generator = iter(fake_2d_detector_img_generator(seed_img, num_frame=18, threshold=0.5, noise_range=0.55))\n",
-    "\n",
+    "generator = iter(fake_2d_detector_img_generator(seed_img, num_frame=128, min_intensity=0.5,\n",
+    "                                                signal_mu=0.5, signal_err=0.3,\n",
+    "                                                noise_mu=0.9, noise_err=0.3))\n",
     "for iframe, simg in enumerate(generator):\n",
     "    frame = sc.DataArray(data=sc.array(dims=['x', 'y'], values=simg),\n",
     "                        coords={'x': sc.linspace('x', 0, detector_size[0]+1, detector_size[0]+1, unit='mm'),\n",
