--- a/src/beamlime/offline/proto.ipynb
+++ b/src/beamlime/offline/proto.ipynb
@@ -9,10 +9,41 @@
    },
    "outputs": [],
    "source": [
+    "import scipp as sc\n",
     "import plopp as pp\n",
     "from beamlime.offline.proto import BeamLimeApplicationManager\n",
-    "\n",
+    "from beamlime.logging import get_logger\n",
+    "import logging\n",
+    "from beamlime.logging.handlers import BeamlimeStreamHandler\n",
+    "from beamlime.logging.formatters import BeamlimeFormatter\n",
     "%matplotlib widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0342ed0-de4d-419a-9952-706d87f0fb28",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "logger = sc.get_logger()\n",
+    "logger.setLevel('INFO')\n",
+    "widget_handler = sc.logging.make_widget_handler()\n",
+    "logger.addHandler(widget_handler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce97003f-027f-4649-afd5-92a52d135bf3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "sc.display_logs()"
    ]
   },
   {
@@ -24,7 +55,10 @@
    },
    "outputs": [],
    "source": [
-    "manager = BeamLimeApplicationManager()"
+    "# get_logger().addHandler(BeamlimeStreamHandler(header=True))\n",
+    "# get_logger().setLevel('INFO')\n",
+    "# manager = BeamLimeApplicationManager(save_log=True)\n",
+    "manager = BeamLimeApplicationManager(logger=logger)"
    ]
   },
   {
@@ -56,18 +90,6 @@
    "source": [
     "manager.app_instances['visualization']._instances[0].figs['heatmap']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c6be80c-a6c0-4626-9aae-098f04979d7d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "pp.show_graph(manager.app_instances['visualization']._instances[0].stream_nodes['heatmap'])"
-   ]
   }
  ],
  "metadata": {
@@ -86,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
