Update example notebook

--- a/src/beamlime/offline/proto.ipynb
+++ b/src/beamlime/offline/proto.ipynb
@@ -29,9 +29,11 @@
    "outputs": [],
    "source": [
     "logger = sc.get_logger()\n",
-    "logger.setLevel('INFO')\n",
     "widget_handler = sc.logging.make_widget_handler()\n",
-    "logger.addHandler(widget_handler)"
+    "# widget_handler.level = logging.DEBUG\n",
+    "logger.addHandler(widget_handler)\n",
+    "# logger.setLevel('DEBUG')\n",
+    "logger.setLevel('INFO')"
    ]
   },
   {
@@ -61,6 +63,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "400132cb-4f43-4082-af2e-6c1a54d0f984",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "get_logger().addHandler(BeamlimeStreamHandler(header=True))\n",
+    "get_logger().setLevel('INFO')\n",
+    "manager = BeamLimeApplicationManager(save_log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ee588828-b095-4038-abf0-5e51c19f4c5e",
    "metadata": {
     "tags": []
@@ -71,9 +87,7 @@
     "loop = asyncio.get_event_loop()\n",
     "\n",
     "for coroutine in manager.coroutines:\n",
-    "    asyncio.run_coroutine_threadsafe(coroutine, loop)\n",
-    "    \n",
-    "# manager.create_task()"
+    "    asyncio.run_coroutine_threadsafe(coroutine, loop)\n"
    ]
   },
   {
