Update handler in configuration

--- a/src/beamlime/offline/offline_system_example.ipynb
+++ b/src/beamlime/offline/offline_system_example.ipynb
@@ -23,11 +23,11 @@
     "\n",
     "<!-- TODO: Create a documentation about data reduction application and link it here. -->\n",
     "\n",
-    "## Visualization\n",
+    "## visualisation\n",
     "\n",
-    "``bealime.offline.visualization.RealtimePlot`` is used as a visualization application.\n",
+    "``bealime.offline.visualisation.RealtimePlot`` is used as a visualisation application.\n",
     "\n",
-    "<!-- TODO: Create a documentation about visualization application and link it here. -->\n"
+    "<!-- TODO: Create a documentation about visualisation application and link it here. -->\n"
    ]
   },
   {
@@ -151,13 +151,13 @@
     "\n",
     "All applications are connected by ``Queue`` with each other, and the direction of the data-flow is downstream.\n",
     "\n",
-    "> ``data-feeder`` -> Queue -> ``data-reduction`` -> Queue -> ``visualization``\n",
+    "> ``data-feeder`` -> Queue -> ``data-reduction`` -> Queue -> ``visualisation``\n",
     "\n",
     "The ``data-feeder`` app will keep creating a frame of fake data and pushing it into the ``Queue``, \n",
     "\n",
     "and the ``data-reduction`` app will keep drawing the data from the ``Queue`` and reducing the data and pushing the result into the next ``Queue``,\n",
     "\n",
-    "and the ``visualization`` app will keep drawing the data from the ``Queue`` and update the plot.\n"
+    "and the ``visualisation`` app will keep drawing the data from the ``Queue`` and update the plot.\n"
    ]
   },
   {
@@ -211,7 +211,7 @@
     "\n",
     "Currently we don't have a special interface for this purpose so we will just use the attribute of the application instance.\n",
     "\n",
-    "Visualization waits a couple of seconds more than other applications to make sure the ``Queue`` is not empty at the beginning,\n",
+    "visualisation waits a couple of seconds more than other applications to make sure the ``Queue`` is not empty at the beginning,\n",
     "\n",
     "so you might need to rerun the cell ...!"
    ]
@@ -225,7 +225,7 @@
    },
    "outputs": [],
    "source": [
-    "manager.app_instances['visualization']._instances[0].figs['heatmap']"
+    "manager.app_instances['visualisation']._instances[0].figs['heatmap']"
    ]
   },
   {
@@ -261,7 +261,7 @@
     "tags": []
    },
    "source": [
-    "If you want a fresh start, you can kill the visualization instance and populate it again."
+    "If you want a fresh start, you can kill the visualisation instance and populate it again."
    ]
   },
   {
@@ -274,9 +274,9 @@
    "outputs": [],
    "source": [
     "manager.app_instances['data-reduction'].kill()\n",
-    "manager.app_instances['visualization'].kill()\n",
+    "manager.app_instances['visualisation'].kill()\n",
     "manager.app_instances['data-reduction'].populate()\n",
-    "manager.app_instances['visualization'].populate()"
+    "manager.app_instances['visualisation'].populate()"
    ]
   },
   {
@@ -305,7 +305,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    manager.app_instances['visualization']._instances[0].figs['heatmap']\n",
+    "    manager.app_instances['visualisation']._instances[0].figs['heatmap']\n",
     "except:\n",
     "    import time\n",
     "    time.sleep(1)"
