Update test notebook

--- a/src/beamlime/offline/offline_system_example.ipynb
+++ b/src/beamlime/offline/offline_system_example.ipynb
@@ -23,11 +23,11 @@
     "\n",
     "<!-- TODO: Create a documentation about data reduction application and link it here. -->\n",
     "\n",
-    "## visualisation\n",
+    "## Visualization\n",
     "\n",
-    "``bealime.offline.visualisation.RealtimePlot`` is used as a visualisation application.\n",
+    "``bealime.offline.visualization.RealtimePlot`` is used as a visualization application.\n",
     "\n",
-    "<!-- TODO: Create a documentation about visualisation application and link it here. -->\n"
+    "<!-- TODO: Create a documentation about visualization application and link it here. -->\n"
    ]
   },
   {
@@ -53,14 +53,11 @@
     "Each application is configured under ``data-stream.applications`` in the configuration file.\n",
     "\n",
     "``name``: Name of the application.\n",
+    "``data-handler``: Handler class that will be used for the application. The handler class should inherit ``BeamlimeApplicationInterface``.\n",
+    "``timeout``: How long the application wants to wait for receiving data or sending data.\n",
+    "``wait-interval``: How often does the application wants to check if it can resume the work.\n",
     "\n",
-    "``instance-number``: Number of instances to be populated. If not given, the system will populate only 1 instance of this application.\n",
-    "> Currently populating multi-instances may cause unexpected problems so please don't...!\n",
-    "\n",
-    "``input-channel``/``output-channel``: Communication interface to use. Currently ``QUEUE`` and ``KAFKA`` are available.\n",
-    "\n",
-    "``keep-alive``: Not implemented yet. It will be used by the system to re-populate the instances if they are interrupted.\n",
-    "\n",
+    "``timeout`` and ``wait-interval`` can be used with ``async_timeout`` decorator for various Exceptions.\n",
     "\n",
     "<!-- TODO: Remove this configuration description after writing a proper documentation. -->"
    ]
@@ -151,13 +148,13 @@
     "\n",
     "All applications are connected by ``Queue`` with each other, and the direction of the data-flow is downstream.\n",
     "\n",
-    "> ``data-feeder`` -> Queue -> ``data-reduction`` -> Queue -> ``visualisation``\n",
+    "> ``data-feeder`` -> Queue -> ``data-reduction`` -> Queue -> ``visualization``\n",
     "\n",
     "The ``data-feeder`` app will keep creating a frame of fake data and pushing it into the ``Queue``, \n",
     "\n",
     "and the ``data-reduction`` app will keep drawing the data from the ``Queue`` and reducing the data and pushing the result into the next ``Queue``,\n",
     "\n",
-    "and the ``visualisation`` app will keep drawing the data from the ``Queue`` and update the plot.\n"
+    "and the ``visualization`` app will keep drawing the data from the ``Queue`` and update the plot.\n"
    ]
   },
   {
@@ -181,7 +178,7 @@
    "source": [
     "In the jupyter notebook, it is easy to mess up the async event loop, \n",
     "\n",
-    "so instead of using ``run`` interface, we will run the coroutine manually.\n",
+    "so instead of using ``run`` interface, we will create the task from the coroutine.\n",
     "\n",
     "Once you start the coroutine, the logs will be collected in the widget above."
    ]
@@ -195,23 +192,31 @@
    },
    "outputs": [],
    "source": [
-    "import asyncio\n",
-    "loop = asyncio.get_event_loop()\n",
-    "\n",
-    "for coroutine in manager.coroutines:\n",
-    "    asyncio.run_coroutine_threadsafe(coroutine, loop)\n"
+    "tasks = manager.create_task()"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3fb4dbb8-8e74-4445-a84e-8ef7115c8f51",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e3c4f9f-dbe4-40d6-bf99-cd22bb5f040b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "tasks"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "b2674350-7a49-4708-9fb7-23e778280b59",
    "metadata": {},
    "source": [
     "Now you can plot the real-time-updating plot.\n",
     "\n",
     "Currently we don't have a special interface for this purpose so we will just use the attribute of the application instance.\n",
     "\n",
-    "visualisation waits a couple of seconds more than other applications to make sure the ``Queue`` is not empty at the beginning,\n",
+    "Visualization waits a couple of seconds more than other applications to make sure the ``Queue`` is not empty at the beginning,\n",
     "\n",
     "so you might need to rerun the cell ...!"
    ]
@@ -225,7 +230,7 @@
    },
    "outputs": [],
    "source": [
-    "manager.app_instances['visualisation']._instances[0].figs['heatmap']"
+    "list(manager.applications['visualisation']._instances.values())[0].figs['heatmap']"
    ]
   },
   {
@@ -247,11 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "import asyncio\n",
-    "loop = asyncio.get_event_loop()\n",
-    "\n",
-    "for coroutine in manager.coroutines:\n",
-    "    asyncio.run_coroutine_threadsafe(coroutine, loop)\n"
+    "manager.create_task()"
    ]
   },
   {
@@ -261,7 +262,7 @@
     "tags": []
    },
    "source": [
-    "If you want a fresh start, you can kill the visualisation instance and populate it again."
+    "If you want a fresh start, you can kill the visualization instance and populate it again."
    ]
   },
   {
@@ -273,10 +274,10 @@
    },
    "outputs": [],
    "source": [
-    "manager.app_instances['data-reduction'].kill()\n",
-    "manager.app_instances['visualisation'].kill()\n",
-    "manager.app_instances['data-reduction'].populate()\n",
-    "manager.app_instances['visualisation'].populate()"
+    "manager.applications['data-reduction'].kill()\n",
+    "manager.applications['visualisation'].kill()\n",
+    "manager.applications['data-reduction'].populate()\n",
+    "manager.applications['visualisation'].populate()"
    ]
   },
   {
@@ -288,11 +289,7 @@
    },
    "outputs": [],
    "source": [
-    "import asyncio\n",
-    "loop = asyncio.get_event_loop()\n",
-    "\n",
-    "for coroutine in manager.coroutines:\n",
-    "    asyncio.run_coroutine_threadsafe(coroutine, loop)"
+    "manager.create_task()"
    ]
   },
   {
@@ -304,11 +301,7 @@
    },
    "outputs": [],
    "source": [
-    "try:\n",
-    "    manager.app_instances['visualisation']._instances[0].figs['heatmap']\n",
-    "except:\n",
-    "    import time\n",
-    "    time.sleep(1)"
+    "list(manager.applications['visualisation']._instances.values())[0].figs['heatmap']"
    ]
   }
  ],
