Remove unused import

--- a/src/blueprint.ipynb
+++ b/src/blueprint.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "75373e27-537b-495f-ae68-f5ca2a82c67f",
    "metadata": {
@@ -38,7 +39,6 @@
    "source": [
     "from beamlime.applications.controller import Controller, app_factory\n",
     "from beamlime.applications.interfaces import ControlInterface\n",
-    "from beamlime.ready_factory import log_factory\n",
     "from beamlime.logging import BeamlimeLogger\n",
     "from logging import DEBUG\n",
     "\n",
