--- a/docs/blueprint.ipynb
+++ b/docs/blueprint.ipynb
@@ -44,7 +44,7 @@
    },
    "outputs": [],
    "source": [
-    "from beamlime.applications.daemons import Controller, ControlInterface\n",
+    "from beamlime.applications.daemons import DataProcessDaemon, ControlInterface\n",
     "from beamlime.ready_factory import log_factory, app_factory\n",
     "from beamlime.logging import BeamlimeLogger\n",
     "from logging import DEBUG"
@@ -63,7 +63,7 @@
     "    app_factory[BeamlimeLogger].setLevel(DEBUG)\n",
     "    command = app_factory[ControlInterface]\n",
     "    command.start()\n",
-    "    ctrl = app_factory[Controller]\n",
+    "    ctrl = app_factory[DataProcessDaemon]\n",
     "    ctrl.run()"
    ]
   },
@@ -189,7 +189,7 @@
     "        local_factory[BeamlimeLogger].setLevel(DEBUG)\n",
     "        command = local_factory[ControlInterface]\n",
     "        command.start()\n",
-    "        ctrl = local_factory[Controller]\n",
+    "        ctrl = local_factory[DataProcessDaemon]\n",
     "        ctrl.run()"
    ]
   },
@@ -215,7 +215,7 @@
    "outputs": [],
    "source": [
     "from beamlime.applications.daemons import DataPlotter\n",
-    "app_factory[DataPlotter].show()"
+    "local_factory[DataPlotter].show()"
    ]
   }
  ],
