Add relative path to the jupyter notebook path to use tests as a package and update documentation index.

--- a/docs/developer/benchmark.ipynb
+++ b/docs/developer/benchmark.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3aaa96a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "sys.path.insert(0, os.path.abspath('../../'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3756777c",
    "metadata": {},
@@ -372,7 +383,6 @@
    "outputs": [],
    "source": [
     "from tests.benchmarks.environments import HardwareSpec, env_providers\n",
-    "from rich.pretty import Pretty\n",
     "from beamlime.constructors import Factory\n",
     "from dataclasses import dataclass\n",
     "from typing import NewType\n",
