--- a/docs/developer/benchmark.ipynb
+++ b/docs/developer/benchmark.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3aaa96a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys, os\n",
-    "sys.path.insert(0, os.path.abspath('../../'))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3756777c",
    "metadata": {},
@@ -44,10 +33,21 @@
     "It is a bridge object that glues \n",
     "``report: BenchmarkReport``, ``runner: BenchmarkRunner`` and ``file_manager: BenchmarkFileManager``.\n",
     "\n",
-    "``report`` and ``file_manager`` are not expected to be replaced often,\n",
-    "but the ``runner`` is expected to be replaced often for various ways of tests.\n",
+    "``runner`` is expected to be customized often for various ways of tests.\n",
+    "``report`` and ``file_manager`` are not expected to be replaced as often.\n",
     "\n",
     "You can build a benchmark session object from the ``Factory``."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3aaa96a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "sys.path.insert(0, os.path.abspath('../../'))  # To use ``tests`` as a package."
    ]
   },
   {
@@ -70,9 +70,7 @@
    "id": "0d75c9c3",
    "metadata": {},
    "source": [
-    "Here is the simple use case of ``BenchmarkSession.run``.\n",
-    "\n",
-    "The ``BenchmarkSession.run`` passes all arguments to ``runner`` and append its result into the ``report``."
+    "Here is the simple use case of ``BenchmarkSession.run``."
    ]
   },
   {
@@ -97,6 +95,8 @@
    "id": "7b63a66a",
    "metadata": {},
    "source": [
+    "The ``BenchmarkSession.run`` passes all arguments to ``runner`` and append its result into the ``report``.\n",
+    "\n",
     "You can use ``BenchmarkSession.configure`` to temporarily update configurations."
    ]
   },
@@ -122,9 +122,9 @@
     "\n",
     "It is because these tools are intended for time-consuming tests, in the scale of minutes and hours.\n",
     "\n",
-    "If you need multi-thousands iterations similar to ``timeit``, you can write the ``runner`` to do so.\n",
+    "If you need multi-thousands iterations similar to ``timeit``, you can write a special ``runner`` to do so.\n",
     "\n",
-    "See [Exercise:-TimeIt-Runner] for an example."
+    "See [Exercies: TimeIt Runner](Exercise:-TimeIt-Runner) for an example."
    ]
   },
   {
