Update documentation of benchmark.

--- a/docs/developer/benchmark.ipynb
+++ b/docs/developer/benchmark.ipynb
@@ -22,21 +22,7 @@
     "## Running Benchmarks\n",
     "\n",
     "Benchmark tests and related tools are collected in ``tests/benchmarks``\n",
-    "and ``tests/prototypes`` of the [repository](https://github.com/scipp/beamlime).\n",
-    "\n",
-    "These tools and prototypes are implemented with dependency injection modules of ``beamlime``.\n",
-    "\n",
-    "### Benchmark Session\n",
-    "\n",
-    "``BenchmarkSession`` is the key helper for benchmark tests.\n",
-    "\n",
-    "It is a bridge object that glues \n",
-    "``report: BenchmarkReport``, ``runner: BenchmarkRunner`` and ``file_manager: BenchmarkFileManager``.\n",
-    "\n",
-    "``runner`` is expected to be customized often for various ways of tests.\n",
-    "``report`` and ``file_manager`` are not expected to be replaced as often.\n",
-    "\n",
-    "You can build a benchmark session object from the ``Factory``."
+    "and ``tests/prototypes`` of the [repository](https://github.com/scipp/beamlime)."
    ]
   },
   {
@@ -51,6 +37,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "12f1ea33",
+   "metadata": {},
+   "source": [
+    "### Benchmark Session\n",
+    "\n",
+    "``BenchmarkSession`` is the entry point to run benchmark tests. <br>\n",
+    "\n",
+    "``BenchmarkSession`` is a bridge object that connects ``FileManager``, ``BenchmarkReport`` and ``BenchmarkRunner`` instances. <br>\n",
+    "Therefore ``session`` carries all other components, ``session.report``, ``session.runner`` and ``session.file_manager`` as its fields. <br>\n",
+    "\n",
+    "``BenchmarkSession`` is a nested dataclass and it is meant to be built by dependency injection. <br>\n",
+    "``create_benchmark_session_factory`` is a helper to build a ``beamlime.constructor.Factory`` <br>\n",
+    "with all necessary providers to build ``BenchmarkSession`` object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "db5d1f7c",
@@ -58,10 +61,14 @@
    "outputs": [],
    "source": [
     "from rich.pretty import Pretty\n",
-    "from tests.benchmarks.runner import create_benchmark_runner_factory, BenchmarkSession\n",
+    "from tests.benchmarks.runner import create_benchmark_session_factory, BenchmarkSession, AutoSaveFlag\n",
     "\n",
-    "benchmark_factory = create_benchmark_runner_factory()\n",
-    "session = benchmark_factory[BenchmarkSession]\n",
+    "benchmark_session_factory = create_benchmark_session_factory()\n",
+    "\n",
+    "# Disable auto-save.\n",
+    "with benchmark_session_factory.constant_provider(AutoSaveFlag, False):    \n",
+    "    session = benchmark_session_factory[BenchmarkSession]\n",
+    "\n",
     "Pretty(session, max_depth=1)"
    ]
   },
@@ -70,7 +77,9 @@
    "id": "0d75c9c3",
    "metadata": {},
    "source": [
-    "Here is the simple use case of ``BenchmarkSession.run``."
+    "\n",
+    "\n",
+    "Here is the simple use case of ``session.run``."
    ]
   },
   {
@@ -95,9 +104,9 @@
    "id": "7b63a66a",
    "metadata": {},
    "source": [
-    "The ``BenchmarkSession.run`` passes all arguments to ``runner`` and append its result into the ``report``.\n",
+    "The ``session.run`` passes all arguments to ``session.runner`` and append its result into the ``session.report``.\n",
     "\n",
-    "You can use ``BenchmarkSession.configure`` to temporarily update configurations."
+    "You can use ``session.configure`` to temporarily update configurations."
    ]
   },
   {
@@ -148,7 +157,7 @@
    "outputs": [],
    "source": [
     "from tests.benchmarks.runner import BenchmarkRunner\n",
-    "runner = benchmark_factory[BenchmarkRunner]  # SimpleRunner\n",
+    "runner = benchmark_session_factory[BenchmarkRunner]  # SimpleRunner\n",
     "\n",
     "def test_func(x: float) -> float:\n",
     "    from time import sleep\n",
@@ -229,8 +238,9 @@
     "\n",
     "\n",
     "# Build the benchmark session with the customized runner and run the tests.\n",
-    "with benchmark_factory.temporary_provider(BenchmarkRunner, TimeItRunner):\n",
-    "    timeit_session = benchmark_factory[BenchmarkSession]\n",
+    "with benchmark_session_factory.temporary_provider(BenchmarkRunner, TimeItRunner):\n",
+    "    timeit_session = benchmark_session_factory[BenchmarkSession]\n",
+    "    timeit_session.configurations.auto_save = AutoSaveFlag(False)\n",
     "\n",
     "\n",
     "timeit_session.run(test_func, 100, x=0.001)\n",
